# nearobject-framework

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Device.c  Device.cxx  Device.h  Device.hxx  Driver.c  Driver.cxx  Driver.h  Driver.hxx  Public.h  Queue.c  Queue.cxx  Queue.h  Queue.hxx  README.md  ReadMe.txt  Trace.h  UwbCore.hxx  UwbCxDependencies.hxx  UwbSimulator.inf  UwbSimulator.sln  UwbSimulator.vcxproj  UwbSimulator.vcxproj.filters  UwbSimulatorDdiCallbacksLrp.hxx  UwbSimulatorDevice.cxx  UwbSimulatorDevice.hxx  UwbSimulatorDeviceFileObject.cxx  UwbSimulatorDeviceFileObject.hxx  UwbSimulatorDriver.cxx  UwbSimulatorIoQueue.cxx  UwbSimulatorIoQueue.hxx  UwbSimulatorTrace.wprp  packages.config  packages.config.in  (+2 more)
lib/nearobject/: CMakeLists.txt  NearObject.cxx  NearObject.hxx  NearObjectCapabilities.hpp  NearObjectCapabilities.hxx  NearObjectConnectionProfile.cxx  NearObjectConnectionProfile.hxx  NearObjectConnectionProfileSecurity.hxx  NearObjectIdentityToken.cxx  NearObjectIdentityTokenUwb.cxx  NearObjectManager.cxx  NearObjectManager.hxx  NearObjectProfile.cxx  NearObjectProfile.hxx  NearObjectProfileSecurity.cxx  NearObjectProfileSecurity.hxx  NearObjectSession.cxx  NearObjectSession.hxx  NearObjectSessionEventCallbacks.hxx
lib/nearobject/core/: CMakeLists.txt  ConnectionProfile.cxx  ConnectionProfile.hxx  ConnectionProfileManager.cxx  ConnectionProfileManager.hxx  DeviceManager.hxx  ISecureDevice.hxx  ISecureDeviceChannel.hxx  NearObject.hxx  NearObjectSession.cxx  NearObjectSession.hxx  NearObjectSessionEventCallbacks.hxx  NearObjectSessionEventHandler.cxx  NearObjectSessionEventHandler.hxx  OobChannel.cxx  OobChannel.hxx  OobChannelBluetooth.cxx  OobChannelBluetooth.hxx  OobConnection.cxx  OobConnection.hxx  OobManager.cxx  OobManager.hxx  ProfileManager.hxx  SecureDevice.cxx  SecureDevice.hxx  SecureDeviceChannel.hxx  SecureDeviceManager.hxx  UwbDeviceManager.hxx
lib/nearobject/discovery/: CMakeLists.txt  NearObjectDiscoveryService.cxx  NearObjectDiscoverySource.cxx  NearObjectDiscoverySource.hxx  NearObjectDiscoverySourceBluetooth.cxx  NearObjectDiscoverySourceBluetooth.hxx  NearObjectOobConnection.cxx  NearObjectOobConnection.hxx
lib/nearobject/persist/: CMakeLists.txt  NearObjectProfileJsonSerializer.cxx  NearObjectProfilePersisterFilesystem.cxx
lib/nearobject/serialization/: CMakeLists.txt  NearObjectIdentityTokenUwbJsonSerializer.cxx  NearObjectProfileJsonSerializer.cxx  UwbConfigurationJsonSerializer.cxx  UwbMacAddressJsonSerializer.cxx  UwbSessionDataJsonSerializer.cxx
lib/nearobject/service/: CMakeLists.txt  ConnectionProfileManager.cxx  ConnectionProfileManager.hxx  DeviceManager.hxx  NearObjectConnectionProfileManager.cxx  NearObjectConnectionProfileManager.hxx  NearObjectDevice.cxx  NearObjectDevice.hxx  NearObjectDeviceController.cxx  NearObjectDeviceControllerDiscoveryAgent.cxx  NearObjectDeviceControllerManager.cxx  NearObjectDeviceControllerUwb.cxx  NearObjectDeviceDiscoveryAgent.cxx  NearObjectDeviceDiscoveryAgent.hxx  NearObjectDeviceManager.cxx  NearObjectDeviceManager.hxx  NearObjectDeviceUwb.cxx  NearObjectDeviceUwb.hxx  NearObjectDiscoveryService.cxx  NearObjectDiscoveryService.hxx  NearObjectDiscoverySource.cxx  NearObjectDiscoverySource.hxx  NearObjectDiscoverySourceBluetooth.cxx  NearObjectDiscoverySourceBluetooth.hxx  NearObjectOobConnection.cxx  NearObjectOobConnection.hxx  NearObjectProfileManager.cxx  NearObjectProfileManager.hxx  NearObjectProfilePersisterFilesystem.cxx  NearObjectProfilePersisterFilesystem.hxx  NearObjectService.cxx  NearObjectService.hxx  NearObjectServiceConfiguration.cxx  NearObjectServiceInjector.hxx  NearObjectSessionEventHandler.cxx  NearObjectSessionEventHandler.hxx  NearObjectSessionIdGeneratorRandom.cxx  OobChannel.cxx  OobChannel.hxx  OobChannelBluetooth.cxx  (+16 more)
lib/se/: CMakeLists.txt  README.md  SecureElement.cxx  SecureElement.hxx  SecureElementChannel.cxx  SecureElementChannel.hxx
lib/se/globalplatform/: CMakeLists.txt  SecurityDomain.cxx  SecurityDomain.hxx
lib/se/iso/: Apdu.cxx  Apdu.hxx  CMakeLists.txt  Tlv.hxx  TlvBer.cxx  TlvBer.hxx
lib/shared/jsonify/: CMakeLists.txt  jsonify.hxx
lib/shared/logging/: CMakeLists.txt  LogUtils.cxx
lib/shared/notstd/: CMakeLists.txt  guid.hxx  memory.hxx  (+1 more)
lib/smartcard/: Apdu.cxx  Apdu.hxx  CMakeLists.txt  ISmartCard.hxx  ISmartcard.cxx  ISmartcard.hxx  Smartcard.cxx  Smartcard.hxx  Tlv.cxx  Tlv.hxx  TlvBer.cxx  TlvBer.hxx
lib/uwb/: CMakeLists.txt  IUwbDevice.hxx  OobChannel.hxx  OobChannelBluetooth.cxx  OobChannelBluetooth.hxx  OobConnection.hxx  UwbCapability.cxx  UwbDevice.cxx  UwbDevice.hxx  UwbMacAddress.cxx  UwbMacAddressJsonSerializer.cxx  UwbPeer.cxx  UwbPeerJsonSerializer.cxx  UwbRangingSession.cxx  UwbRangingSession.hxx  UwbSession.cxx  UwbSession.hxx  UwbVersion.cxx
linux/nearobjectd/: CMakeLists.txt  Main.cxx
tests/unit/: CMakeLists.txt  Main.cxx  NearObjectIdentityTokenTest.hxx  TestNearObjectDeviceControllerDiscoveryAgent.cxx  TestNearObjectDeviceDiscoveryAgent.cxx  TestNearObjectDeviceManager.cxx  TestNearObjectIdentityTokenUwb.cxx  TestNearObjectManager.cxx  TestNearObjectProfile.cxx  TestNearObjectProfileManager.cxx  TestNearObjectProfilePersister.cxx  TestNearObjectService.cxx  TestNearObjectSession.cxx  TestNearObjectSessionIdGeneratorRandom.cxx  TestTlvBer.cxx  TestTlvSimple.cxx  task_queue.cxx
tools/cli/: CMakeLists.txt  Main.cxx  NearObjectCli.cxx  NearObjectCliControlFlowContext.cxx  NearObjectCliData.cxx  NearObjectCliHandler.cxx  NearObjectCliUwbSessionEventCallbacks.cxx
windows/: CMakeLists.txt  README.md
windows/devices/: CMakeLists.txt
windows/drivers/: CMakeLists.txt
windows/nearobject/: CMakeLists.txt
windows/nearobjectsvc/: CMakeLists.txt  Main.cxx  nearobjectsvctrace.wprp
windows/service/: CMakeLists.txt  Main.cxx  OobManager.hxx  SecureDeviceManager.hxx  Service.cxx  Service.hxx  UwbService.cxx  UwbService.hxx
windows/shared/: CMakeLists.txt
windows/tools/: CMakeLists.txt
windows/uwbcx/: CMakeLists.txt
windows/uwbsim/: CMakeLists.txt
(+487 files in other folders)
